--- a/Cleo/Cleo/Cleo.Client/Pages/ChatRoom/ChatRoom.razor
+++ b/Cleo/Cleo/Cleo.Client/Pages/ChatRoom/ChatRoom.razor
@@ -1,6 +1,10 @@
-﻿@using Microsoft.AspNetCore.SignalR.Client
+﻿@implements IDisposable
+
+
+@using Cleo.Client.Services
+@using Microsoft.AspNetCore.SignalR.Client
 @using Cleo.Shared.Models
-@inject NavigationManager NavManager
+@inject ChatroomService chatroomService
 
 @page "/room"
 @rendermode InteractiveWebAssembly
@@ -15,7 +19,7 @@
             </div>
             <div class="card-body">
                 <ul class="message-list">
-                    @foreach (var msg in messages)
+                    @foreach (var msg in chatroomService.Messages)
                     {
                         <li class="mb-2">
                             @msg.DateTime <br />
@@ -25,10 +29,10 @@
                     }
                 </ul>
                 <div class="mt-3">
-                    <EditForm Model="newMessage" OnValidSubmit="SendMessageClicked">
+                    <EditForm Model="newMessage" OnValidSubmit="SendMessageOnClick">
                         <DataAnnotationsValidator />
                         <div class="vstack gap-1">
-                            <InputText @bind-Value="newMessage.User.Username" class="form-control w-25" placeholder="Username"/>
+                            <InputText @bind-Value="newMessage.User.Username" class="form-control w-25 fw-bold" placeholder="Username"/>
                             <InputTextArea @bind-Value="newMessage.Text" class="form-control" placeholder="Message"/>
                         </div>
                         <button class="float-end btn btn-success mt-3" type="submit">Send</button>
@@ -37,7 +41,7 @@
 
             </div>
             <div class="card-footer fw-bold">
-                @if(!isConnected)
+                @if(!chatroomService.IsConnected)
                 {
                     <div class="alert alert-danger">Chat Disconnected</div>
                 }
